--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="hero-group">
                     <div class="grid">
                         <div class="row flex-align-center">
-                            <div class="col l-7 m-7">
+                            <div class="col l-7 m-7 c-7">
                                 <h1 class="hero-heading">
                                     <span>A healthy meal delivered to</span> your door,
                                     <strong>every single day</strong>
@@ -101,7 +101,7 @@
                                     <a href="" class="btn solid-btn">Get Started</a>
                                 </div>
                             </div>
-                            <div class="col l-5 m-5">
+                            <div class="col l-5 m-5 c-5">
                                 <img src="./assets/imgs/hero/meals.png" alt="Meals" class="hero-img">
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                 <div class="hero-customer-proof">
                     <div class="grid">
                         <div class="row">
-                            <div class="col l-6">
+                            <div class="col l-6 m-6 c-6">
                                 <div class="customer-img-wrapper flex-align-center">
                                     <img src="./assets/imgs/customers/customer-1.jpg" alt="Profile picture of customer">
                                     <img src="./assets/imgs/customers/customer-2.jpg" alt="Profile picture of customer">
@@ -121,7 +121,7 @@
                                     <img src="./assets/imgs/customers/customer-6.jpg" alt="Profile picture of customer">
                                 </div>
                             </div>
-                            <div class="col l-6">
+                            <div class="col l-6 m-6 c-6">
                                 <div class="customer-data flex-align-center">
                                     <p class="customer-data-item">
                                         <span>310,000+</span> meals delivered this year!
@@ -157,7 +157,7 @@
                     <div class="row">
                         <div class="col l-12 m-12 c-12">
                             <div class="row flex-align-center">
-                                <div class="col l-8 m-8">
+                                <div class="col l-8 m-8 c-12">
                                     <div class="how-text-wrapper">
                                         <h3 class="how-step-num">01</h3>
                                         <h4 class="how-heading">
@@ -173,7 +173,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col l-4 m-4">
+                                <div class="col l-4 m-4 c-12">
                                     <div class="how-img-wrapper text-center">
                                         <img src="./assets/imgs/app/app-1.png" alt="">
                                     </div>
@@ -182,7 +182,7 @@
                         </div>
                         <div class="col l-12 m-12 c-12">
                             <div class="row flex-align-center flex-reverse">
-                                <div class="col l-8 m-8">
+                                <div class="col l-8 m-8 c-12">
                                     <div class="how-text-wrapper">
                                         <h3 class="how-step-num">02</h3>
                                         <h4 class="how-heading">
@@ -195,7 +195,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col l-4 m-4">
+                                <div class="col l-4 m-4 c-12">
                                     <div class="how-img-wrapper text-center">
                                         <img src="./assets/imgs/app/app-2.png" alt="">
                                     </div>
@@ -204,7 +204,7 @@
                         </div>
                         <div class="col l-12 m-12 c-12">
                             <div class="row flex-align-center">
-                                <div class="col l-8 m-8">
+                                <div class="col l-8 m-8 c-12">
                                     <div class="how-text-wrapper">
                                         <h3 class="how-step-num">03</h3>
                                         <h4 class="how-heading">
@@ -219,7 +219,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col l-4 m-4">
+                                <div class="col l-4 m-4 c-12">
                                     <div class="how-img-wrapper text-center">
                                         <img src="./assets/imgs/app/app-3.png" alt="">
                                     </div>
@@ -731,7 +731,7 @@
             <section class="section-member-info">
                 <div class="grid wide member-info-banner">
                     <div class="row">
-                        <div class="col l-3">
+                        <div class="col l-3 m-6 c-6">
                             <div class="banner-item">
                                 <i class="fa-solid fa-infinity" aria-hidden="true"></i>
                                 <h3 class="banner-heading">Never cook again</h3>
@@ -740,7 +740,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col l-3">
+                        <div class="col l-3 m-6 c-6">
                             <div class="banner-item">
                                 <i class="fa-solid fa-seedling" aria-hidden="true"></i>
                                 <h3 class="banner-heading">Local and organic</h3>
@@ -749,8 +749,8 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col l-3">
-                            <div class="banner-item">
+                        <div class="col l-3 m-6 c-6">
+                            <div class="banner-item tablet-mt-28">
                                 <i class="fa-solid fa-recycle" aria-hidden="true"></i>
                                 <h3 class="banner-heading">Zero waste</h3>
                                 <p class="banner-desc">
@@ -758,8 +758,8 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col l-3">
-                            <div class="banner-item">
+                        <div class="col l-3 m-6 c-6">
+                            <div class="banner-item tablet-mt-28">
                                 <i class="fa-solid fa-pause" aria-hidden="true"></i>
                                 <h3 class="banner-heading">Pause anytime</h3>
                                 <p class="banner-desc">
@@ -783,15 +783,15 @@
                             </p>
                             <form action="" class="subscribe-form" id="form-subscribe-element">
                                 <div class="row sm-gutter">
-                                    <div class="col l-6 m-6 c-6">
+                                    <div class="col l-6 m-12 c-12">
                                         <label for="user-name">Name</label>
                                         <input type="text" id="user-name" placeholder="John Doe" required>
                                     </div>
-                                    <div class="col l-6 m-6 c-6">
+                                    <div class="col l-6 m-12 c-12">
                                         <label for="email">Email</label>
                                         <input type="email" id="email" placeholder="john@doe.com" required>
                                     </div>
-                                    <div class="col l-6 m-6 c-6">
+                                    <div class="col l-6 m-12 c-12">
                                         <label for="user-plan">Which plan interests you the most?</label>
                                         <select name="plans" id="user-plan">
                                             <option value="" disabled="disabled" selected="">
@@ -802,7 +802,7 @@
                                             <option value="Custom">Custom</option>
                                         </select>
                                     </div>
-                                    <div class="col l-6 m-6 c-6">
+                                    <div class="col l-6 m-12 c-12">
                                         <button class="subscribe-btn">Sign Up</button>
                                     </div>
                                 </div>
@@ -816,7 +816,7 @@
         <footer class="footer">
             <div class="grid wide">
                 <div class="row">
-                    <div class="col l-2-4 m-2-4">
+                    <div class="col l-2-4 m-4 c-12">
                         <a href="#">
                             <img src="./assets/imgs/omnifood-logo.png" alt="Omnifood Logo" class="footer__logo">
                         </a>
@@ -840,7 +840,7 @@
                         </p>
                     </div>
 
-                    <div class="col l-2-4 m-2-4">
+                    <div class="col l-2-4 m-4 c-12">
                         <ul class="footer-links">
                             <li>Contact us</li>
                             <li>
@@ -855,7 +855,7 @@
                         </ul>
                     </div>
 
-                    <div class="col l-2-4 m-2-4">
+                    <div class="col l-2-4 m-4 c-12">
                         <ul class="footer-links">
                             <li>Account</li>
                             <li><a href="#">Create Account</a></li>
@@ -865,7 +865,7 @@
                         </ul>
                     </div>
 
-                    <div class="col l-2-4 m-2-4">
+                    <div class="col l-2-4 m-4 c-12">
                         <ul class="footer-links">
                             <li>Company</li>
                             <li><a href="#">About Omnifood</a></li>
@@ -877,7 +877,7 @@
                         </ul>
                     </div>
 
-                    <div class="col l-2-4 m-2-4">
+                    <div class="col l-2-4 m-4 c-12">
                         <ul class="footer-links">
                             <li>Resources</li>
                             <li><a href="#">Recipe Directory</a></li>
@@ -894,9 +894,17 @@
         </footer>
     </div>
 
-    <div class="not-supported">
+    <div class="not-supported-big">
         <h3>
             Currently, we are unable to support devices with 2K resolution or more.
+            <br>
+            Please check back at a later time. Thank you.
+        </h3>
+    </div>
+
+    <div class="not-supported-small">
+        <h3>
+            Currently, we are unable to support devices with resolution lower than laptop.
             <br>
             Please check back at a later time. Thank you.
         </h3>
