--- a/index.html
+++ b/index.html
@@ -411,44 +411,45 @@
                                     <img src="./assets/imgs/gallery/gallery-1.jpg" alt="Bowl of ramen with chopsticks">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-2.jpg"
+                                    <img src="./assets/imgs/gallery/gallery-2.jpg"
                                         alt="Steak, green beans nicely plated">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-3.jpg"
+                                    <img src="./assets/imgs/gallery/gallery-3.jpg"
                                         alt="Large platter of different foods">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-4.jpg"
+                                    <img src="./assets/imgs/gallery/gallery-4.jpg"
                                         alt="Large platter of different fruits and acai bowl">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-5.jpg"
+                                    <img src="./assets/imgs/gallery/gallery-5.jpg"
                                         alt="Chef cooking in restaurant environment">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-6.jpg"
+                                    <img src="./assets/imgs/gallery/gallery-6.jpg"
                                         alt="Two containers filled with chicken, avocado, chickpeas and rice">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-7.jpg" alt="Hard boiled eggs over chicken">
+                                    <img src="./assets/imgs/gallery/gallery-7.jpg" alt="Hard boiled eggs over chicken">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-8.jpg" alt="Jar filled with healthy veggies">
+                                    <img src="./assets/imgs/gallery/gallery-8.jpg"
+                                        alt="Jar filled with healthy veggies">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-9.jpg"
+                                    <img src="./assets/imgs/gallery/gallery-9.jpg"
                                         alt="Chef presenting beautifully plated meal">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-10.jpg" alt="Chef plating a meal carefully">
+                                    <img src="./assets/imgs/gallery/gallery-10.jpg" alt="Chef plating a meal carefully">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-11.jpg"
+                                    <img src="./assets/imgs/gallery/gallery-11.jpg"
                                         alt="Pan with different types of healthy food">
                                 </figure>
                                 <figure class="gallery-img-wrapper">
-                                    <img src="/assets/imgs/gallery/gallery-12.jpg"
+                                    <img src="./assets/imgs/gallery/gallery-12.jpg"
                                         alt="Two burgers stacked on each other">
                                 </figure>
                             </div>
